# ranking-service

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: vocab.json
notebooks/: 1.eda.ipynb  2.text_preprocess.ipynb  3.train_data_creation.ipynb  4.model_training.ipynb  5.candidate_selection_with_faiss.ipynb
src/: main.py
src/data/: make_dataset.py  text_retriever.py
src/features/: build_embedding_matrix.py  text_retriever.py
src/models/: evaluate.py  faiss_index.py  knrm_model.py  predict.py  train.py
