[tool.poetry]
name = "ranking-service"
version = "0.1.0"
description = ""
authors = ["Gwynny <yahoo660@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ranking_service"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
torch = "^1.10.0"
faiss-cpu = "^1.7.3"
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
