[tool.poetry]
name = "ranking-service"
version = "0.1.0"
description = ""
authors = ["Gwynny <yahoo660@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "data", from = "src"},
    {include = "features", from = "src"},
    {include = "models", from = "src"},
    {include = "notebooks"}
]

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
faiss-cpu = "^1.7.3"
flake8 = "^6.0.0"
llvmlite = "^0.39.0"
mlflow = "^2.0.1"
nltk = "^3.8.1"
numpy = "^1.21.0"
torch = "^1.12.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
ipykernel = "^6.20.1"
faiss-cpu = "^1.7.3"
flake8 = "^6.0.0"
llvmlite = "^0.39.0"
mlflow = "^2.0.1"
mypy = "^0.991"
nltk = "^3.8.1"
numba = "^0.56.0"
numpy = "^1.21.0"
optuna = "^3.0.0"
pandas = "^1.5.0"
pytest = "^3.0"
scipy = "^1.9.0"
torch = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
